--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+/* regole generali */
+
 /* classe standard per impostare un padding a tutta la pagina */
 
 .rientro{
@@ -27,6 +29,9 @@
   color: white;
   cursor: pointer;
 }
+.button:hover{
+  opacity: 0.6;
+}
 
 /* barra navigazione login */
 
@@ -49,6 +54,10 @@
   cursor: pointer;
 }
 
+.barra-login .fas{
+  margin: 0px 2px;
+}
+
 .nav-login{
   text-align: right;
 }
@@ -68,3 +77,18 @@
 .nav-login .fa-search{
   color: #5fc5d5;
 }
+
+#specialbutton{
+  color: #fe775a;
+  background-color: #fff;
+  border: 1px solid #fe775a;
+}
+
+#specialbutton:hover{
+  background-color: rgba(254, 119, 90, 0.1)
+}
+
+
+/* header */
+
+/* barra navigazione dell'header */
