--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /* clearfix */
 
-.barra-login::after, .header-nav:after, .main-first .row-one::after{
+.barra-login::after, .header-nav:after, .main-first .row-one::after, .main-first .row-two::after{
   display: table;
   content: "";
   clear: both;
@@ -40,12 +40,13 @@
 /* liste con simbolo check arancione */
 
 .list-title{
-  text-transform: capitalize;
-  font-size: 20px;
+  text-transform: uppercase;
+  font-size: 18px;
   font-weight: 600;
 }
 .orange-list{
   list-style: none;
+  text-align: left;
 }
 
 .orange-list .fas{
@@ -53,6 +54,8 @@
   font-size: 15px;
   margin-right: 10px;
 }
+
+/* regole specifiche */
 
 /* barra navigazione login */
 
@@ -229,6 +232,7 @@
   background-color: #fff;
   border: 1px solid #f1f6fb;
   padding: 5%;
+  margin-bottom: 30px;
 }
 
 .row-one .left{
@@ -252,15 +256,17 @@
   padding-left: 30px;
 }
 
-.row-one h3{
-margin-bottom: 20px;
+.row-one .right h3{
+  font-size: 25px;
+  font-weight: 800;
+  margin-bottom: 20px;
 }
 
 .row-one .right p{
   margin-bottom: 15px;
 }
 
-.list-title span{
+.list-title h4{
   display: inline-block;
   width: 28%;
 }
@@ -279,4 +285,49 @@ margin-top: 20px;
 .row-one .right li{
   display: inline-block;
   margin-right: 20px;
+}
+
+/* seconda riga divisa in 3 colonne */
+
+.row-two .colonna30{
+  float: left;
+  width: 30%;
+  background-color: #fff;
+  border: 1px solid #f1f6fb;
+  padding: 2% 5%;
+  text-align: center;
+}
+
+.row-two .colonna30:nth-child(2){
+  margin: 0 5%;
+}
+
+.row-two .colonna30>img:first-of-type{
+  height: 120px;
+  text-align: center;
+}
+
+.row-two .colonna30 h3{
+  margin: 20px 0;
+  font-size: 25px;
+  font-weight: 800;
+}
+
+.row-two .colonna30 p{
+  margin-bottom: 40px;
+}
+
+.row-two .colonna30 .list-title{
+  margin: 20px 0;
+}
+
+.row-two .colonna30 li{
+  margin-bottom: 10px;
+}
+
+.row-two .colonna30 .button{
+  display: inline-block;
+  width: 140px;
+  margin: 0 auto;
+  margin-top: 20px;
 }
