--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /* clearfix */
 
-.barra-login::after, .header-nav:after, .main-first .row-one::after, .main-first .row-two::after, .table-row-one::after, .table-row-two::after,.main-third-row-one::after, .main-third-row-two::after, .third-one-colonna-right::after{
+.barra-login::after, .header-nav:after, .main-first .row-one::after, .main-first .row-two::after, .table-row-one::after, .table-row-two::after,.main-third-row-one::after, .main-third-row-two::after, .third-one-colonna-right::after,.footer-top::after, .footer-legal::after{
   display: table;
   content: "";
   clear: both;
@@ -467,4 +467,102 @@ margin-top: 20px;
 
 .third-two-colonna-right img{
   height: 350px;
+}
+
+/* footer */
+
+footer{
+  background-color: #32495b;
+  color: #92a1b0;
+}
+
+/* parte superiore con le liste */
+
+.footer-top{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.footer-list{
+  float: left;
+  width: 25%;
+}
+.footer-list li{
+  list-style: none;
+  margin-bottom: 15px;
+}
+
+.footer-list a{
+  text-decoration: none;
+  color: #92a1b0;
+}
+
+.footer-list li:first-child{
+  color: #fff;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+.footer-list .button{
+  display: inline-block;
+  color: #32495b;
+  background-color: #92a1b0;
+}
+
+.footer-list .social-icon{
+  font-size: 18px;
+}
+
+.footer-list .fab{
+  margin-right: 18px;
+}
+
+/* parte inferiore lingue e copyright */
+
+/* parte lingue */
+
+.footer-bottom{
+  padding: 20px 0 30px 0;
+}
+.footer-languages{
+  padding-bottom: 15px;
+  text-align: center;
+  border-bottom: 1px solid
+}
+
+.footer-languages div{
+  display: inline-block;
+  margin: 0 20px;
+  color: #92a1b0;
+}
+
+/* parte copyright */
+
+.footer-legal{
+  padding: 30px 0 30px 0;
+}
+
+.footer-legal-logo{
+  float: left;
+  width: 50%;
+  text-align: left;
+}
+
+.footer-legal-right{
+  float: left;
+  width: 50%;
+  text-align: right;
+}
+
+footer a{
+  text-decoration: none;
+  color: #92a1b0;
+}
+
+.footer-legal-logo div:last-child{
+  margin-top: 8px;
+  color: #FFF;
+}
+
+.footer-legal-right a{
+  margin-left: 15px;
 }
