assegnato tag a .button

--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,11 @@
 /* class button comune a tutti i bottoni arancioni */
 
 .button{
+  /* display: inline-block; */
   background-color: #fe775a;
   padding: 10px;
-  border-radius: 0.5em;
+  border-radius: 5px;
   color: #fff;
-  cursor: pointer;
-  text-decoration: none;
 }
 .button:hover{
   opacity: 0.6;
@@ -218,17 +217,17 @@ ul{
 
 /* intestazione */
 
-.intestazione{
+.main-first .intestazione{
   text-align: center;
   width: 70%;
   margin: 0 auto;
 }
 
-.intestazione img[alt="cubo"]{
+.main-first .intestazione img[alt="cubo"]{
   height: 150px;
 }
 
-.intestazione h2{
+.main-first .intestazione h2{
   margin: 10px 0 20px;
   font-size: 35px;
   font-weight: 800;
@@ -251,10 +250,9 @@ ul{
   height: 120px;
 }
 .main-first .row-one .button{
-  width: 140px;
-  padding: 15px;
+  display: block;
+  width: 120px;
   margin: 20px auto;
-  text-align: center;
 }
 
 .main-first .row-one .right{
