--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -21,7 +21,7 @@
 }
 /* clearfix */
 
-.barra-login::after, .header-nav:after, .main-first .row-one::after, .main-first .row-two::after, .table-row-one::after, .table-row-two::after,.main-third-row-one::after, .main-third-row-two::after, .footer-top::after, .footer-legal::after{
+.barra-login::after, .header-nav:after, .main-first .first-row-one::after, .main-first .first-row-two::after, .table-row-one::after, .table-row-two::after,.main-third-row-one::after, .main-third-row-two::after, .footer-top::after, .footer-legal::after{
   display: table;
   content: "";
   clear: both;
@@ -30,6 +30,7 @@
 /* class button comune a tutti i bottoni arancioni */
 
 .button{
+  /* display: inline-block; */
   background-color: #fe775a;
   padding: 10px;
   border-radius: 5px;
@@ -41,11 +42,6 @@
 
 /* liste con simbolo check arancione */
 
-.list-title{
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: 600;
-}
 .orange-list{
   text-align: left;
 }
@@ -66,6 +62,27 @@ a{
 
 ul{
   list-style: none;
+}
+
+/* formattazione titoli */
+
+h2{
+  margin: 10px 0 20px;
+  font-size: 35px;
+  font-weight: 800;
+}
+
+h3{
+  margin: 10px 0 20px;
+  font-size: 25px;
+  font-weight: 800;
+}
+
+h4{
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 10px 0 20px;
 }
 
 /* dropdowns */
@@ -97,6 +114,7 @@ ul{
 
 /* regole specifiche */
 
+
 /* barra navigazione login */
 
 .barra-login{
@@ -123,6 +141,7 @@ ul{
   margin: 0px 3px;
 }
 
+
 .nav-globe span{
   margin: 0 15px;
 }
@@ -141,7 +160,6 @@ ul{
 
 /* parte destra con i bottoni */
 
-
 .nav-bottoni{
   text-align: right;
 }
@@ -152,6 +170,24 @@ ul{
 
 .nav-bottoni .fa-search{
   color: #5fc5d5;
+}
+
+/* dropleft */
+
+.dropleft{
+  display: inline-block;
+  line-height: normal;
+}
+
+.dropleft-content{
+  display: none;
+  line-height: 60px;
+  z-index: 100;
+  padding: 0 20px;
+}
+
+.dropleft:hover .dropleft-content{
+  display: inline-block;
 }
 
 #specialbutton{
@@ -207,7 +243,6 @@ ul{
 .header-nav .fas{
   margin-left: 7px;
 }
-
 
 /* nav dropdown */
 
@@ -299,66 +334,55 @@ ul{
 
 /* intestazione */
 
-.main-first .intestazione{
+.main-first .main-first-intestazione{
   text-align: center;
   width: 70%;
   margin: 0 auto;
 }
 
-.main-first .intestazione img[alt="cubo"]{
+.main-first .main-first-intestazione img[alt="cubo"]{
   height: 150px;
 }
 
-.main-first .intestazione h2{
-  margin: 10px 0 20px;
-  font-size: 35px;
-  font-weight: 800;
-}
 
 /* prima riga divisa in due left e right */
 
-.main-first .row-one{
+.main-first .first-row-one{
   background-color: #fff;
   border: 1px solid #f1f6fb;
   padding: 5%;
 }
 
-.main-first .row-one .left{
+.main-first .first-row-one .first-one-left{
   float: left;
   width: 30%;
   text-align: center;
 }
-.main-first .row-one .left img{
+.main-first .first-row-one .first-one-left img{
   height: 120px;
 }
-.main-first .row-one .button{
+.main-first .first-row-one .button{
   display: block;
   width: 120px;
   margin: 20px auto;
 }
 
-.main-first .row-one .right{
+.main-first .first-row-one .first-one-right{
   float: left;
   width: 70%;
   padding-left: 30px;
 }
 
-.main-first .row-one .right h3{
-  font-size: 25px;
-  font-weight: 800;
-  margin-bottom: 20px;
-}
-
-.main-first .row-one .right p{
+.main-first .first-row-one .first-one-right p{
   margin-bottom: 15px;
 }
 
-.main-first .row-one .list-title h4{
+.main-first .first-row-one .list-title h4{
   display: inline-block;
   width: 28%;
 }
 
-.main-first .row-one .list-title hr{
+.main-first .first-row-one .list-title hr{
   color: #000;
   display: inline-block;
   margin-left: 5%;
@@ -366,17 +390,14 @@ ul{
   vertical-align: middle;
 }
 
-.main-first .row-one .right ul{
-margin-top: 20px;
-}
-.main-first .row-one .right li{
+.main-first .first-row-one .first-one-right li{
   display: inline-block;
   margin-right: 20px;
 }
 
 /* seconda riga divisa in 3 blocchetti */
 
-.main-first .row-two .colonna30{
+.main-first .first-row-two .first-two-colonna30{
   float: left;
   width: 30%;
   background-color: #fff;
@@ -385,35 +406,26 @@ margin-top: 20px;
   text-align: center;
 }
 
-.main-first .row-two .colonna30:nth-child(2){
+.main-first .first-row-two .first-two-colonna30:nth-child(2){
   margin: 0 5%;
 }
 
-.main-first .row-two .colonna30>img:first-of-type{
+.main-first .first-row-two .first-two-colonna30>img:first-of-type{
   height: 120px;
   text-align: center;
 }
 
-.main-first .row-two .colonna30 h3{
-  margin: 20px 0;
-  font-size: 25px;
-  font-weight: 800;
-}
-
-.main-first .row-two .colonna30 p{
+.main-first .first-row-two .first-two-colonna30 p{
   min-height: 230px;
   border-bottom: 1px solid #000;
 }
 
-.main-first .row-two .colonna30 .list-title{
-  margin: 20px 0;
-}
 
-.main-first .row-two .colonna30 li{
+.main-first .first-row-two .first-two-colonna30 li{
   margin-bottom: 10px;
 }
 
-.main-first .row-two .colonna30 .button{
+.main-first .first-row-two .first-two-colonna30 .button{
   display: inline-block;
   width: 140px;
   margin: 0 auto;
@@ -428,12 +440,6 @@ margin-top: 20px;
    text-align: center;
    padding-top: 30px;
    padding-bottom: 50px;
-}
-
-.main-second-intestazione h2{
-  margin-bottom: 20px;
-  font-size: 35px;
-  font-weight: 800;
 }
 
 .table-colonna25{
@@ -526,11 +532,6 @@ margin-top: 20px;
   width: 50%;
 }
 
-.third-two-colonna-left h2{
-  font-size: 40px;
-  font-weight: 800;
-  margin-bottom: 25px;
-}
 
 .third-two-colonna-left .button{
   display: inline-block;
